--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   },
   "homepage": "https://github.com/Shopify/shopify-demo-app-node-react#readme",
   "dependencies": {
+    "@apollo/client": "^3.3.11",
     "@shopify/app-bridge": "^1.28.0",
     "@shopify/app-bridge-react": "^1.28.0",
     "@shopify/koa-shopify-auth": "^3.2.0",
     "@shopify/koa-shopify-graphql-proxy": "^4.1.0",
     "@shopify/koa-shopify-webhooks": "^2.6.0",
     "@shopify/polaris": "^5.15.0",
-    "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.9",
     "dotenv": "^8.2.0",
+    "firebase": "^8.3.2",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.11.0",
     "isomorphic-fetch": "^3.0.0",
@@ -39,9 +40,9 @@
     "koa-session": "^6.1.0",
     "next": "^10.0.5",
     "react": "^16.14.0",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.14.0",
-    "store-js": "^2.0.4"
+    "store-js": "^2.0.4",
+    "webpack": "^5.30.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
